k8s/ingress/ingress.yml
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: ${regional_static_ip}
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vof-tracker-ingress
  namespace: ${namespace}
  labels:
    app: vof-tracker
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: ${vof_domain_name}
    http:
      paths:
      - path: /
        backend:
          serviceName: vof-tracker
          servicePort: http
  tls:
    - hosts:
      - ${vof_domain_name}
      secretName: vof-tls-secret
